[gd_scene load_steps=43 format=2]

[ext_resource path="res://Stages_Reina/Bosses/BossBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sounds/BossSounds/BBCF_Izanami_Intro_2_(B).ogg" type="AudioStream" id=3]
[ext_resource path="res://Stages_Reina/Bosses/Elisa1/Elisa1.gd" type="Script" id=4]
[ext_resource path="res://Stages_Reina/Bosses/Elisa1/laser.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sounds/Classic/S3K_74 - Magnetic.wav" type="AudioStream" id=6]
[ext_resource path="res://Stages_Reina/Enemies/nemeum homing shot.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sounds/Classic/S3K_42 - Insta Shield.wav" type="AudioStream" id=8]
[ext_resource path="res://Stages_Reina/Bosses/Elisa1/DrawMarkers.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sounds/Classic/S3K_DeathEggLaser2.wav" type="AudioStream" id=10]
[ext_resource path="res://Stages_Reina/Bosses/Elisa1/Elisa_Phase01_Masterfile.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 11 )
region = Rect2( 0, 152, 64, 76 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 11 )
region = Rect2( 64, 152, 64, 76 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 11 )
region = Rect2( 128, 152, 64, 76 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 11 )
region = Rect2( 192, 152, 64, 76 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 11 )
region = Rect2( 256, 152, 64, 76 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 11 )
region = Rect2( 320, 152, 64, 76 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 11 )
region = Rect2( 384, 152, 64, 76 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 76 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 0, 76, 64, 76 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 64, 76, 64, 76 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 128, 76, 64, 76 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 11 )
region = Rect2( 192, 76, 64, 76 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 11 )
region = Rect2( 256, 76, 64, 76 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 76 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 64, 76 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 64, 76 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 64, 76 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 11 )
region = Rect2( 256, 0, 64, 76 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 11 )
region = Rect2( 320, 0, 64, 76 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 11 )
region = Rect2( 384, 0, 64, 76 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 11 )
region = Rect2( 448, 0, 64, 76 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 11 )
region = Rect2( 0, 76, 64, 76 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 11 )
region = Rect2( 0, 228, 64, 76 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 11 )
region = Rect2( 64, 228, 64, 76 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 11 )
region = Rect2( 128, 228, 64, 76 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 11 )
region = Rect2( 192, 228, 64, 76 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 11 )
region = Rect2( 256, 228, 64, 76 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 11 )
region = Rect2( 320, 228, 64, 76 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 11 )
region = Rect2( 384, 228, 64, 76 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 11 )
region = Rect2( 448, 228, 64, 76 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 11 )
region = Rect2( 512, 228, 64, 76 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": false,
"name": "attack",
"speed": 15.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 7.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "intro",
"speed": 15.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), null ],
"loop": false,
"name": "teleport",
"speed": 30.0
} ]

[node name="BossElisa" instance=ExtResource( 1 )]
script = ExtResource( 4 )
lasers = ExtResource( 5 )
spinning_bullet = ExtResource( 7 )
markers_scene = ExtResource( 9 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, 25 )

[node name="AnimatedSprite" parent="." index="1"]
position = Vector2( 8, -46 )
frames = SubResource( 11 )
animation = "attack"
frame = 6
offset = Vector2( -3, -2 )

[node name="IntroSound" parent="." index="3"]
stream = ExtResource( 3 )

[node name="DebugLabel" parent="." index="7"]
text = "animation = \"attack\"
playing = false
"

[node name="CircleAttack" type="AudioStreamPlayer2D" parent="." index="9"]
stream = ExtResource( 6 )
bus = "Player/Enemies"

[node name="TeleportSound" type="AudioStreamPlayer2D" parent="." index="10"]
stream = ExtResource( 8 )
bus = "Player/Enemies"

[node name="LasersSound" type="AudioStreamPlayer" parent="." index="11"]
stream = ExtResource( 10 )
bus = "Player/Enemies"

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
